[metadata]
name = pytorch-fxd
version = 0.0.1
author = Akshaya Karthikeyan
author_email = akshaya.karthikeyan@research.iiit.ac.in
description = A package containing methods to compute FXD score and other popular metrics to find the distance between image distributions. This enable building better generative models for niche domains such as Chest X-Rays.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
